Refactor HTTP requests to use HttpClient and remove deprecated code
- Updated NameFetcher and PlayerUtils to use HttpClient for API calls.
- Removed unused imports and deprecated methods across multiple files.
- Enhanced error handling for HTTP responses in Updater and other
classes.